--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,7 @@
 :root{
     background-color: transparent;
     --transition: 0.5s;
+    --size-config: 30vw;
 }
 body{
     background-color:transparent;
@@ -20,15 +21,47 @@ body{
 }
 #config{
     height: 100vh;
-    width: 15vw;
-    background-color: #343434    ;
+    width: var(--size-config);
+    background-color: #343434;
+    display: flex;
     position: absolute;
-    right: -15vw;
+    overflow-y: auto;
+    overflow-x: hidden;
+    right: calc(-1 * var(--size-config));
     transition: var(--transition);
-
 }
+#config-drag{
+    position: fixed;
+    height: 100vh;
+    width: 10px;
+    cursor: ew-resize;
+    background-color: #343434;
+    transition: var(--transition);
+}
+#content{
+    margin-left: 10px;
+}
+#config-drag:hover{
+    background-color: #555;
+}
+#config::-webkit-scrollbar {
+  height: 10px;
+  width: 10px;
+}
+#config::-webkit-scrollbar-track {
+  border-radius: 5px;
+  background-color: #343434;
+}
+
+#config::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 1px solid #ffffff;
+}
+
+
 body.config-open #app{
-    width: 85vw;
+    width: calc(100vw - var(--size-config));
 }
 body.config-open #config{
     right: 0;
@@ -46,7 +79,7 @@ body.config-open #config{
     transition: var(--transition);
 }
 body.config-open #buttonBar{
-    right: 15vw;
+    right: var(--size-config);
 }
 
 #buttonBar div{
